# GPT4DFCI

./: CITATION.cff  README.md
DFCI-GPT4DFCI/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
DFCI-GPT4DFCI-Backend/: Dockerfile  README.md  gunicorn.conf.py  ocr-pipeline.yaml  pyproject.toml
DFCI-GPT4DFCI-Backend/app/: main.py  models.py  utils.py
DFCI-GPT4DFCI-Backend/tests/: conftest.py  test_create_completion.py  test_create_convo.py  test_get_convo.py  test_get_convos.py  test_get_messages.py  test_update_convo.py
DFCI-GPT4DFCI-infra/: README.md  infra-pulumi-alpha.py
DFCI-GPT4DFCI/src/: App.tsx  main.tsx  theme.ts  utils.ts
DFCI-GPT4DFCI/src/components/ConfirmationDialog/: ConfirmationDialog.tsx  index.ts
DFCI-GPT4DFCI/src/components/ConvoDisplay/: ConvoDisplay.tsx  index.ts
DFCI-GPT4DFCI/src/components/ConvoList/: ConvoList.tsx  ConvoListItem.tsx  index.ts
DFCI-GPT4DFCI/src/components/ExpandableInput/: ExpandableInput.tsx  index.ts  utils.ts
DFCI-GPT4DFCI/src/components/LandingDisplay/: LandingDisplay.tsx  index.ts
DFCI-GPT4DFCI/src/components/Layout/: Layout.tsx  LayoutDrawer.tsx
DFCI-GPT4DFCI/src/components/MessageBubble/: MessageBubble.tsx  (+1 more)
DFCI-GPT4DFCI/src/hooks/: useAPI.ts  useAutoScrollToBottom.ts  useConvos.ts
DFCI-GPT4DFCI/src/models/: index.ts
DFCI-GPT4DFCI/src/services/: AssistantService.ts  StorageService.ts  UserService.ts
DFCI-GPT4DFCI/tests/: App.spec.ts  ConvoList.spec.ts  ExpandableInput.ts
DFCI-GPT4DFCI/tests/mocks/: AssistantService.ts  StorageService.ts  UserService.ts
(+7 files in other folders)
